--- a/ask-gpt/package.json
+++ b/ask-gpt/package.json
@@ -5,20 +5,22 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "deploy": "vercel",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "frog": "latest",
     "hono": "^4",
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
+    "next": "^14.1.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "vercel": "^33.6.1"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react-dom": "^18",
+    "typescript": "^5"
   }
 }
